  types (such as string subtypes) when building elements around them.

* Add support for the :root pseudo-class in cssselect.

* Tree iteration and ``iterparse()`` with a selective ``tag``
  argument supports passing a set of tags.  Tree nodes will be
  returned by the iterators if they match any of the tags.

Bugs fixed
----------

* ``el.find('*')`` could accidentally return a comment or processing
  instruction that happened to be in the wrong spot.  (Same for the
  other ``.find*()`` methods.)

* The error logging is less intrusive and avoids a global setup where
  possible.

* Fixed undefined names in html5lib parser.

* ``xpathgrep.py`` did not work in Python 3.

* ``Element.attrib.update()`` did not accept an ``attrib`` of
  another Element as parameter.

* For subtypes of ``ElementBase`` that make the ``.text`` or ``.tail``
  properties immutable (as in objectify, for example), inserting text
  when creating Elements through the E-Factory feature of the class
  constructor would fail with an exception, stating that the text
  cannot be modified.

Other changes
--------------

* The functionality of "lxml.cssselect" was moved into a separate PyPI
  package called "cssselect".  To continue using it, you must install
  that package separately.  The "lxml.cssselect" module is still
  available and provides the same interface, provided the "cssselect"
  package can be imported at runtime.

* Element attributes passed in as an ``attrib`` dict or as keyword
  arguments are now sorted by (namespaced) name before being created
  to make their order predictable for serialisation and iteration.
  Note that adding or deleting attributes afterwards does not take
  that order into account, i.e. setting a new attribute appends it
  after the existing ones.

* Several classes that are for internal use only were removed
  from the ``lxml.etree`` module dict:
  ``_InputDocument, _ResolverRegistry, _ResolverContext, _BaseContext,